--- a/natours/sass/base/_typography.scss
+++ b/natours/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.7;
@@ -69,6 +69,10 @@ body {
     font-size: 2.5rem;
   }
 
+  @include respond(phone-sm) {
+    font-size: 2rem;
+  }
+
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
@@ -79,6 +83,10 @@ body {
   font-size: $default-font-size;
   font-weight: 700;
   text-transform: uppercase;
+
+  @include respond(phone-sm) {
+    font-size: $small-font-size;
+  }
 }
 
 .paragraph {
