--- a/natours/sass/components/_popup.scss
+++ b/natours/sass/components/_popup.scss
@@ -32,6 +32,10 @@
     // because transforms must be defined in one line.
     transform: translate(-50%, -50%) scale(0.25);
     transition: all 0.5s 0.2s; // delay of 0.2s
+
+    @include respond(phone) {
+      width: 90%;
+    }
   }
 
   /* Using paren display: table and child display: table-cell we can 
@@ -57,6 +61,14 @@
     @include respond(tab-port) {
       display: block;
       width: 100%;
+    }
+
+    @include respond(phone) {
+      padding: 2rem 3rem;
+    }
+
+    @include respond(phone-sm) {
+      padding-top: 0;
     }
   }
 
@@ -86,6 +98,15 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+
+    @include respond(phone) {
+      column-count: 1;
+    }
+
+    @include respond(phone-sm) {
+      padding-top: 0;
+      margin-bottom: 2.5rem;
+    }
   }
 
   /* The :target pseudo-class applies to the element when the current url (window.location.href)
@@ -120,55 +141,11 @@
     }
   }
 
-  /*
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba($color-black, 0.9);
-  z-index: 5000;
-
-  &__content {
-    display: block;
-    @include absCenter;
-    background-color: $color-white;
-    width: 75vw;
-  }
-
-  &__images {
-    position: relative;
-    float: left;
-    width: 30vw;
-
-    &--1 {
-      height: auto;
-      width: auto;
-      max-width: 100%;
-      display: block;
-    }
-
-    &--2 {
-      height: auto;
-      width: auto;
-      max-width: 100%;
-      display: block;
+  &__btn {
+    @include respond(phone) {
+      display: block !important;
+      margin: auto;
+      width: fit-content;
     }
   }
-
-  &__text {
-    display: inline-block;
-    padding: 12vh 3vw;
-
-    .heading-secondary {
-      font-size: 2vw;
-      font-weight: 900;
-      white-space: nowrap;
-    }
-
-    .heading-tertiary {
-      font-size: 1vw;
-      font-weight: 900;
-    }
-  }*/
 }
