--- a/natours/sass/abstracts/_mixins.scss
+++ b/natours/sass/abstracts/_mixins.scss
@@ -69,12 +69,25 @@ ORDER: Base + typography > general layout + grid > page layout > components
       @content;
     }
   }
+  @if $breakpoint == tab-land-sm {
+    @media only screen and (max-width: 68.75em) {
+      // 1100px / 16
+      @content;
+    }
+  }
   @if $breakpoint == tab-land {
     @media only screen and (max-width: 75em) {
       // 1200px / 16
       @content;
     }
   }
+  @if $breakpoint == tab-land-lg {
+    @media only screen and (max-width: 81.25em) {
+      // 1300px / 16
+      @content;
+    }
+  }
+
   @if $breakpoint == big-desktop {
     @media only screen and (min-width: 112.5em) {
       // 1800 / 16
