--- a/natours/sass/components/_popup.scss
+++ b/natours/sass/components/_popup.scss
@@ -43,6 +43,7 @@
   &__left {
     width: 33.333333%;
     display: table-cell;
+    overflow: hidden;
 
     @include respond(tab-port) {
       display: table;
@@ -76,9 +77,20 @@
     display: block;
     width: 100%;
 
+    @include respond(tab-land-lg) {
+      width: 113%;
+      transform: translateX(-2rem);
+    }
+
+    @include respond(tab-land-sm) {
+      width: 175%;
+      transform: translateX(-11rem);
+    }
+
     @include respond(tab-port) {
       display: inline-block;
       width: 50%;
+      transform: translateX(0);
     }
   }
 
