--- a/natours/sass/base/_typography.scss
+++ b/natours/sass/base/_typography.scss
@@ -31,6 +31,10 @@ body {
       font-family: 5rem;
     }
 
+    @include respond(phone-sm) {
+      font-size: 5rem;
+    }
+
     /*
       animation-delay: 3s; 
       animation-iteration-count: 3;
@@ -48,6 +52,10 @@ body {
     @include respond(phone) {
       letter-spacing: 0.5rem;
     }
+
+    @include respond(phone-sm) {
+      font-size: 1.7rem;
+    }
   }
 }
 
@@ -55,6 +63,7 @@ body {
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
+  /* margin: 0 2rem; */
 
   @include gradient-text-effect;
 
