--- a/natours/sass/base/_utilities.scss
+++ b/natours/sass/base/_utilities.scss
@@ -26,3 +26,8 @@
 .u-margin-top-huge {
   margin-top: 10rem !important;
 }
+
+.u-padding-lr-medium {
+  padding-left: 3rem !important;
+  padding-right: 3rem !important;
+}
